@@ -1,4 +1,4 @@
-Petal version 0.63
+Petal version 0.64
 ==================
 
 Petal stands for "Perl Template Attribute Language". It is inspired from the
